v3.6.1:
 Developers:
  - Fix: class Tomogram method getDim removed as it did not manage heterogeneous sets correctly when iterating (read the
    header once, stored it and reused). The Volume method is used now instead, as it reads the size from the file
    header for each file.
v3.6.0:
 Users:
  - Tilt series subsets and CTFTomoseries clone the enable flag
  - Acquisition data storage fixed when importing tilt series and tilt series movies (min angle, max angle, and step)
 Developers:
  - Test dataset relion40_sta_tutorial_data expanded.
  - TCL: methods dor checking sets of TS and TsM improved.
  - Class Tomogram method getDim removed as it did not manage heterogeneous sets correctly when iterating (read the
    header once, stored it and reused). The Volume method is used now instead, as it reads the size from the file
    header for each file.
v3.5.0:
 Users:
  - Improve the TiltSeries viewer. Allowing to exclude TiltImages
  - New protocol to import tilt-series CTF from different plugins
  - The CTF tomo series viewer now only plots the Enabled tilt images/ctfs.
  - Template HIV- STA with reliontomo: update the CTF importing method to the new centralized located in em-tomo.
  - Prevent viewers from locking the screen focus.
  - Improve SetOfCoordinates3D str method.
  - Fit vesicles prot nos requesting the tomograms. Refactored.
  - Fix accum dose in TS import without mdoc.
  - Napari 0.4.17 is the default version. boxmanager and tomotwin are now independent

Developers:
  - Improve the Test Centralization layer.
  - Tests for AreTomo2 CTF import added.
  - Expand the method checkTomograms from the Test Centralization Layer.
  - Import tomograms: the acquisition is now copied to both the set and the items.
  - Some refactor in protocol_ts_estimate_ctf.py required for the new CTF code design prots approach.
  - TiltSeries object: expand the method to generate the imod tlt file allowing to consider the excluded views.